# buckshot-roulette-solver

./: .gitignore  LICENSE  README.md  RUST_PORT.md  ai_engine.py  build.py  overlay.py  requirements.txt  scanner.py
.github/workflows/: build.yml
bsr_core/: .gitignore  Cargo.toml  pyproject.toml
bsr_core/src/: lib.rs
pyinstaller_hooks/: hook-onnxruntime.py
tests/: test_ai_engine.py  test_rust_parity.py
